StickyHeaders: reworked fix for ul, ol bullet points "peeking"
Instead of targeting the specific elements to keep them from
going outside the margins, just add our own background in each
heading that extends beyond the margins with the opaque BG.

Works for both legacy and parsoid, and should handle any future
cases of "margin spillage" that aren't z-index related.

Note I'm not 100% sure why I needed the z-index: -1 on the
sticky-background div, it should be behind everything already
but the heading was showing up behind the background without
it.

Bug: T409325

--- a/resources/ext.readerExperiments.stickyHeaders.styles/stickyHeaders.less
+++ b/resources/ext.readerExperiments.stickyHeaders.styles/stickyHeaders.less
@@ -6,31 +6,22 @@
 	top: 0;
 	z-index: 1;
 
+	// Add a div that peeks beyond the margins to cover up anything stray
+	.ext-readerExperiments-stickyHeaders-background {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: @background-color-base;
+		margin-left: -@spacing-100;
+		margin-right: -@spacing-100;
+		z-index: -1;
+	}
+
 	// Ensure that sub-headings and other fragment links are visible when jumped to
 	// stylelint-disable selector-class-pattern
 	& + .mf-collapsible-content {
 		[ id ] {
 			scroll-margin-top: @spacing-400;
-		}
-
-		ul,
-		ol {
-			// Minerva styles set this to 1em
-			// but use a reduced font size for Safari devices that
-			// support an Apple-specific font selector.
-			//
-			// This made the padding smaller on Safari than in Chrome
-			// on a Mac, presumably thus smaller in any browser on iOS
-			// than any browser on Android.
-			//
-			// That allowed the bullet point to "peek out" into the
-			// margin, where the headings don't set a background color.
-			//
-			// todo: merge this into upstream styles
-			// todo: is there a better way to call the runtime CSS max
-			//       function while using our compile-time less variable
-			//       expansions? Take @spacing-100 and add a couple px.
-			padding-left: ~'max( 1em, 18px )';
 		}
 	}
 }
